@@ -3149,6 +3149,8 @@ long_option("mmake-all-2020-05-25",
                                     compiler_sufficiently_recent).
 long_option("unsigned-lt-2020-05-25",
                                     compiler_sufficiently_recent).
+long_option("may-ignore-without-warning-2020-08-18",
+                                    compiler_sufficiently_recent).
 long_option("experiment",           experiment).
 long_option("experiment1",          experiment1).
 long_option("experiment2",          experiment2).
